# ft_vox

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  benchmark.cpp  ft_vox  install_dep.sh  vcpkg.json
.github/workflows/: codeql.yml
.jules/: bolt.md
ressources/: fragment.glsl  vertex.glsl
ressources/shaders/: bloomBlur.glsl  bloomExtract.glsl  boundingBoxFragment.glsl  fragment.glsl  godRays.glsl  playerFragment.glsl  playerVertex.glsl  postProcessFragment.glsl  postProcessVertex.glsl  skyboxFragment.glsl  skyboxVertex.glsl  textVertex.glsl  vertex.glsl
src/: main.cpp  utils.hpp
src/App/: App.cpp  App.hpp
src/Biome/: Biome.cpp  Biome.hpp  BiomeManager.cpp  BiomeManager.hpp  NoiseGenerator.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Chunk/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkPool.cpp  ChunkPool.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp
src/Engine/: ChunkManager.cpp  ChunkManager.hpp  Engine.cpp  Engine.hpp  EngineDefs.hpp  EventBus.hpp  InputSystem.cpp  InputSystem.hpp  Logger.hpp  ThreadPool.hpp  UIManager.cpp  UIManager.hpp  callback.cpp
src/Mesh/: Mesh.cpp  Mesh.hpp
src/Network/: ByteBuffer.hpp  Client.cpp  Client.hpp  Server.cpp  Server.hpp  common.hpp
src/Octree/: Node.hpp  Octree.cpp  Octree.hpp  OctreeNode.cpp  OctreeNode.hpp  SVO.cpp  SVO.hpp
src/Renderer/: PersistentBuffer.cpp  PersistentBuffer.hpp  PostProcessing.cpp  PostProcessing.hpp  Renderer.cpp  Renderer.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureManager.cpp  TextureManager.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Voxel/: Voxel.cpp  Voxel.hpp
src/glad/: glad.c  glad.h
src/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
tests/: CMakeLists.txt  test_network.cpp
